Reduce the amount of warnings during compilation